examples/datalog/14_aggregations/74_having_sim.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_having
Knowledge graph 'test_having' created.
Switched to knowledge graph: test_having
> .kg use test_having
Switched to knowledge graph: test_having
> +orders[(1, "Alice", 50), (2, "Bob", 100), (3, "Alice", 75), (4, "Carol", 30), (5, "Alice", 25)].
Inserted 5 fact(s) into 'orders'.
> +totals(Customer, <SUM:Amount>) :- orders(_, Customer, Amount).
Script error: Parse error: Invalid term: '<SUM:Amount>'
